# janus-formal

./: .codex-global-hermitian-out.txt  .gitignore  JanusFormal.lean  PROGRAM.md  Probe.lean  README.md  RellichKondrachov.lean  ScratchMetricGSIsometry.lean  TODO.md  cobaya_planck_lowl_tt_fork_test.1.txt  cobaya_planck_lowl_tt_fork_test.input.yaml  cobaya_planck_lowl_tt_fork_test.updated.yaml  cobaya_planck_lowl_ttee_fork_test.1.txt  cobaya_planck_lowl_ttee_fork_test.input.yaml  cobaya_planck_lowl_ttee_fork_test.updated.yaml  cobaya_planck_lowl_ttee_janus_fork.input.yaml  cobaya_planck_lowl_ttee_janus_fork.updated.yaml  lake-manifest.json  lakefile.lean  pyproject.toml
JanusFormal/: ActiveZ2Sigma.lean  AllImportsArchive.lean  AsymptoticNullBoundarySymmetry.lean  Basic.lean  ComplexRealityStateLaw.lean  Core.lean  JanusBridgeStateLaw.lean  JanusNewIdeaSectorProgram.lean  JanusSectorTheoryV0.lean  LegacyCMB.lean  NullSigmaPTBridge.lean  P0ActionTermCoefficientDerivation.lean  P0AetherGhostObservationConstraints.lean  P0BiMembraneConfinement.lean  P0BridgeUniquenessObligations.lean  P0CandidateClosureSummary.lean  P0CandidateOrbifoldActionInstantiation.lean  P0CandidateParameterPhaseSpace.lean  P0ClosureAxiomatics.lean  P0CoreGaugeLikeJanusClosure.lean  P0CosmologyObservableProgram.lean  P0DarkSectorEffectiveMap.lean  P0DoubleDualCartanConditionalClosure.lean  P0DynamicSourceObligations.lean  P0EFTAPSPinDiracKernelTrivialization.lean  P0EFTAPSPinDiracSpectrumPairing.lean  P0EFTAPSPinGlobalIndexClosure.lean  P0EFTAPSPinTraceGlobalDerivation.lean  P0EFTAnisotropicPiScan.lean  (+776 more)
(+8265 files in other folders)
